ingress-demo/ingress_pathbased.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
  namespace: default
spec:  # This is where spec begins
  ingressClassName: nginx  # Specify your Ingress Controller
  rules:
    - host: devopswithdeepak.co.in
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nginxsvc  # Your service name for /
                port:
                  number: 80      # Port on which nginxsvc is exposed
          - path: "/java-web-app"
            pathType: Prefix
            backend:
              service:
                name: javawebappsvc  # Your service name for /java-web-app
                port:
                  number: 80      # Port on which javawebappsvc is exposed
